<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rostoyo</name>
  <version>0.1.0</version>
  <description>This ROS2 packet provides an interface to the existing project https://github.com/rabryan/pytuyo by Richard Bryan. A ROS2 node can output the measured value of a mitutoyo dial gauge, both as a topic and as a service.</description>
  <maintainer email="marc.bestmann@dlr.de">Marc Bestmann</maintainer>
  <author email="oliver.muemken@dlr.de">Oliver Mümken</author>
  <author email="marc.bestmann@dlr.de">Marc Bestmann</author>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>dial_gauge_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
